ozone/gbm_buffer: Always set format_modifier_

We only set the format_modifier_ field if the GBM_BO_USE_SCANOUT flags
was set. On platforms where we can't scanout NV12, we fall back to
allocating GbmBuffers without the scanout flag and consequently end up
assuming those are all linear. Except libva, which picks up the tiling
from the kernel bo and decodes with y-tiling enabled.

We need to always and unconditionally store the format modifier, it's
as much part of the buffer meta data as the pixel format. Move
assignment to initializers.

Bug: 845076
Test: crosvideo.appspot.com plays correctly on pre-KBL Intel chromebooks
Change-Id: I74c435807947afb60ea4417ace39751e213792bc
Reviewed-on: https://chromium-review.googlesource.com/1070995
Commit-Queue: Daniele Castagna <dcastagna@chromium.org>
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561380}
Former-commit-id: d50daf01476b7a84b8e30515c8d33ac97d2acd7b